--- a/koop-feedback/package.json
+++ b/koop-feedback/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.6",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
@@ -18,6 +19,8 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-qr-code": "^2.0.15",
+    "react-toastify": "^11.0.5",
     "short-uuid": "^5.2.0",
     "tailwind-merge": "^3.2.0"
   },
