--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -42,5 +42,5 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            ghcr.io/frank-christiansen/koop-feedback:${{ steps.package-version.outputs.current-version}}
+            ghcr.io/frank-christiansen/koop-feedback:${{ github.run_id }}
             ghcr.io/frank-christiansen/koop-feedback:latest
