--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -29,6 +29,9 @@ jobs:
         with:
           bun-version: latest
 
+      - run: cd koop-feedback.Frondend && bun i && bun run build
+      - run: cd koop-feedback.Backend && go get && go build
+
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
